--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -313,7 +313,7 @@ class="post-275 page type-page status-publish ast-article-single" id="post-275" 
 				</div>
 				<div class="elementor-element elementor-element-3035929 elementor-widget elementor-widget-text-editor" data-id="3035929" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-									<p>ssif triocon<br />Building No:3242, Makkah Al mukarramah street,<br />Al Dana District, P.O Box 35514, Saudi Arabia.</p>								</div>
+									<p>SSIF TRIOCON<br />Building No:3242, Makkah Al mukarramah street,<br />Al Dana District, P.O Box 35514, Saudi Arabia.</p>								</div>
 				</div>
 				<div class="elementor-element elementor-element-c9b3ae8 elementor-widget elementor-widget-heading" data-id="c9b3ae8" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
