--- a/index.html
+++ b/index.html
@@ -1043,7 +1043,7 @@ class="post-20 page type-page status-publish ast-article-single" id="post-20" it
                 <path d="M57.5,38.193l12.5,12.5l12.5-12.5l-2.5-2.5l-10,10l-10-10L57.5,38.193z" />
                 </svg></span>	<span class="screen-reader-text">Scroll to Top</span>
 </div>
-<!-- Click to Chat - https://holithemes.com/plugins/click-to-chat/  v4.24 -->  
+Click to Chat - https://holithemes.com/plugins/click-to-chat/  v4.24 
             <div class="ht-ctc ht-ctc-chat ctc-analytics ctc_wp_desktop style-2  " id="ht-ctc-chat"  
                 style="display: none;  position: fixed; bottom: 15px; right: 15px;"   >
                                 <div class="ht_ctc_style ht_ctc_chat_style">
@@ -1146,5 +1146,5 @@ var ElementorProFrontendConfig = {"ajaxurl":"https:\/\/trioconspaceframes.com\/w
 </script>
 	</body>
 
-<!-- Mirrored from trioconspaceframes.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 30 Jun 2025 14:23:57 GMT -->
+
 </html>
