--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 
-<!-- Mirrored from trioconspaceframes.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 30 Jun 2025 14:23:07 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
