TRICON UPDATE contact

--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -321,7 +321,7 @@ class="post-275 page type-page status-publish ast-article-single" id="post-275" 
 				</div>
 				<div class="elementor-element elementor-element-945fa17 elementor-widget elementor-widget-text-editor" data-id="945fa17" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-									<p><a href="+966 13 766 4909">+966 13 766 4909</a> | <a href="tel:+966 55 035 3864">+966 55 035 3864</a><br /></p></div>
+									<p><a href="tel:+966 50 084 1245">+966 50 084 1245</a><br /><a href="tel:+966 55 035 3864">+966 55 035 3864</a><br /><a href="tel:+966 59 740 6575">+966 59 740 6575</a></p></div>
 				</div>
 				<div class="elementor-element elementor-element-d0d7afd elementor-widget elementor-widget-heading" data-id="d0d7afd" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
@@ -329,7 +329,8 @@ class="post-275 page type-page status-publish ast-article-single" id="post-275" 
 				</div>
 				<div class="elementor-element elementor-element-fcb857a elementor-widget elementor-widget-text-editor" data-id="fcb857a" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-									<p><a href="mailto:info@ssifactory.com">info@ssifactory.com</a></p>								</div>
+									<p><a href="mailto:info@ssifactory.com">info@ssifactory.com</a></p>
+									<p><a href="mailto:spaceframe@ssifactory.com">spaceframe@ssifactory.com</a></p>									</div>
 				</div>
 				</div>
 					</div>
@@ -364,6 +365,7 @@ class="post-275 page type-page status-publish ast-article-single" id="post-275" 
 				</div>
 				<div class="elementor-element elementor-element-e6e2bec elementor-widget elementor-widget-text-editor" data-id="e6e2bec" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
+									<p><a href="mailto:info@ssifactory.com">info@ssifactory.com</a></p>
 									<p><a href="mailto:spaceframe@ssifactory.com">spaceframe@ssifactory.com</a></p>								</div>
 				</div>
 				<div class="elementor-element elementor-element-c75bd4b elementor-widget elementor-widget-heading" data-id="c75bd4b" data-element_type="widget" data-widget_type="heading.default">
